force-app/main/default/objects/hud_Email__c.object
<CustomObject>
    <label>hud_Email</label>
    <nameField>
        <displayFormat>HEM-{00000000}</displayFormat>
        <label>Email Key</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>hud_Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>CONTACT_EMAIL_ADDRESS_KEY__c</fullName>
        <externalId>true</externalId>
        <label>CONTACT_EMAIL_ADDRESS_KEY</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFFDT__c</fullName>
        <label>EFFDT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EFF_STATUS__c</fullName>
        <label>EFF_STATUS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMAIL_ADDRESS__c</fullName>
        <label>EMAIL_ADDRESS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMAIL_ADDR_SOURCE__c</fullName>
        <label>EMAIL_ADDR_SOURCE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMAIL_ADDR_TYPE__c</fullName>
        <label>EMAIL_ADDR_TYPE</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMAIL_DOMAIN_NAME__c</fullName>
        <label>EMAIL_DOMAIN_NAME</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMAIL_USER_NAME__c</fullName>
        <label>EMAIL_USER_NAME</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>hud_Emails</relationshipLabel>
        <relationshipName>hud_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>INTERNAL_ID__c</fullName>
        <externalId>true</externalId>
        <label>INTERNAL_ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MULE_UNIQUE_PERSON_KEY__c</fullName>
        <externalId>true</externalId>
        <label>MULE_UNIQUE_PERSON_KEY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OFFICIAL_EMAIL_INDICATOR__c</fullName>
        <label>OFFICIAL_EMAIL_INDICATOR</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREFERRED_ALUMNI_EMAIL__c</fullName>
        <label>PREFERRED_ALUMNI_EMAIL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIVACY_VALUE__c</fullName>
        <label>PRIVACY_VALUE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNIV_ID__c</fullName>
        <externalId>true</externalId>
        <label>UNIV_ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPDATE_DT__c</fullName>
        <label>UPDATE_DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>temp_contactID__c</fullName>
        <label>temp_contactID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>UNIV_ID__c</columns>
        <columns>Email_Contact__c</columns>
        <columns>EMAIL_ADDRESS__c</columns>
        <columns>EMAIL_USER_NAME__c</columns>
        <columns>EMAIL_DOMAIN_NAME__c</columns>
        <columns>EMAIL_ADDR_TYPE__c</columns>
        <columns>OFFICIAL_EMAIL_INDICATOR__c</columns>
        <columns>EFF_STATUS__c</columns>
        <columns>EFFDT__c</columns>
        <columns>UPDATE_DT__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>