force-app/main/default/objects/hud_Email__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>UNIV_ID__c</columns>
    <columns>Email_Contact__c</columns>
    <columns>EMAIL_ADDRESS__c</columns>
    <columns>EMAIL_USER_NAME__c</columns>
    <columns>EMAIL_DOMAIN_NAME__c</columns>
    <columns>EMAIL_ADDR_TYPE__c</columns>
    <columns>OFFICIAL_EMAIL_INDICATOR__c</columns>
    <columns>EFF_STATUS__c</columns>
    <columns>EFFDT__c</columns>
    <columns>UPDATE_DT__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>